# wickra-impact

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  THREAT_MODEL.md  clippy.toml  deny.toml  lychee.toml  osv-scanner.toml  repo-metadata.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/requirements/: ci-dev.in
.github/workflows/: bench.yml  ci.yml  codeql.yml  links.yml  release.yml
bindings/c/: Cargo.toml  README.md  cbindgen.toml
bindings/c/src/: lib.rs
bindings/csharp/WickraImpact/: DllResolver.cs  Impact.cs  Native.cs  README.md  WickraImpact.csproj
bindings/csharp/WickraImpact.Tests/: GoldenTests.cs  ImpactTests.cs  WickraImpact.Tests.csproj
bindings/go/: README.md  go.mod
bindings/java/: README.md  pom.xml
bindings/java/src/main/java/org/wickra/impact/: Impact.java  Native.java
bindings/java/src/test/java/org/wickra/impact/: GoldenTest.java  ImpactTest.java
bindings/node/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
bindings/node/__tests__/: completeness.test.js  golden.test.js  impact.test.js
bindings/node/npm/darwin-arm64/: package.json
bindings/node/npm/darwin-x64/: package.json
bindings/node/npm/linux-arm64-gnu/: package.json
bindings/node/npm/linux-x64-gnu/: package.json
bindings/node/npm/win32-arm64-msvc/: package.json
bindings/node/npm/win32-x64-msvc/: package.json
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/python/wickra_impact/: __init__.py  __init__.pyi
bindings/python/src/: lib.rs
bindings/python/tests/: test_completeness.py  test_golden.py  test_smoke.py
bindings/r/: DESCRIPTION  NAMESPACE  README.md
bindings/r/R/: impact.R
bindings/r/src/: Makevars  Makevars.win  wickra_impact.c
bindings/r/tests/: run_tests.R
bindings/wasm/: Cargo.toml  README.md
bindings/wasm/src/: lib.rs
bindings/wasm/tests/: golden.test.js
crates/impact-bench/: Cargo.toml
crates/impact-bench/benches/: impact.rs
crates/impact-bench/src/: lib.rs
crates/impact-cli/: Cargo.toml
crates/impact-cli/src/: args.rs  main.rs  run.rs
crates/impact-core/: Cargo.toml
crates/impact-core/src/: book_model.rs  config.rs  error.rs  impact.rs  latency.rs  lib.rs  run.rs  spec.rs
crates/impact-core/tests/: conformance.rs  golden.rs  proptest_invariants.rs  walk_vs_naive.rs
docs/: ARCHITECTURE.md  BOOK_WALK.md  Cookbook.md  IMPACT_MODELS.md  INHERITANCE.md  LATENCY.md
examples/: README.md
examples/c/: CMakeLists.txt  run.c  run.cpp
examples/csharp/Run/: Program.cs  Run.csproj
examples/data/requests/: thin_book.json
examples/data/specs/: thin_book.json
examples/go/: go.mod  run.go
examples/java/: pom.xml
examples/java/src/main/java/org/wickra/impact/examples/: Run.java
examples/node/: package.json  run.js
examples/python/: run.py
examples/r/: run.R
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: book_walk.rs  latency_select.rs  run_batch.rs  spec_parse.rs
golden/: README.md
golden/data/: deep_book.json  thin_book_capped.json
golden/expected/: deep_book.json  latency.json  linear_impact.json  square_root.json  thin_book.json  thin_book_capped.json
golden/specs/: latency.json  linear_impact.json  square_root.json  thin_book.json  thin_book_capped.json
