[package]
name = "wickra-impact-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# The core under test. Default features off so the fuzzers exercise the
# single-threaded path (no rayon).
impact-core = { path = "../crates/impact-core", default-features = false }

# Detach from the parent workspace — cargo-fuzz builds this crate on its own with
# sanitizer flags on a nightly toolchain.
[workspace]

[[bin]]
name = "spec_parse"
path = "fuzz_targets/spec_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "book_walk"
path = "fuzz_targets/book_walk.rs"
test = false
doc = false
bench = false

[[bin]]
name = "run_batch"
path = "fuzz_targets/run_batch.rs"
test = false
doc = false
bench = false

[[bin]]
name = "latency_select"
path = "fuzz_targets/latency_select.rs"
test = false
doc = false
bench = false
