[package]
name = "wickra-impact-c"
description = "C ABI (cdylib + staticlib) for wickra-impact — the hub every C-capable language (C, C++, C#, Go, Java, R) links against."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
publish = false

[lib]
name = "wickra_impact"
crate-type = ["cdylib", "staticlib"]

# The C ABI inherently needs `unsafe` (raw pointers across the FFI boundary); the
# workspace forbids it everywhere else, so this crate re-allows it locally.
[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_safety_doc = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"

[dependencies]
impact-core = { path = "../../crates/impact-core", version = "0.1" }
serde_json = { workspace = true }
