[package]
name = "wickra-impact-python"
description = "Python bindings for wickra-impact: a market-impact backtester on the real historical L2 order book."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
publish = false

[lib]
name = "_wickra_impact"
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
impact-core = { path = "../../crates/impact-core", version = "0.1" }
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py39"] }
