[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "wickra-impact"
version = "0.1.0"
description = "The backtester that measures market impact: agent-based fills on the real historical L2 order book."
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = [{ name = "kingchenc", email = "support@wickra.org" }]
requires-python = ">=3.9"
keywords = ["trading", "backtesting", "market-impact", "slippage", "orderbook"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/wickra-lib/wickra-impact"
Repository = "https://github.com/wickra-lib/wickra-impact"
Issues = "https://github.com/wickra-lib/wickra-impact/issues"

[tool.maturin]
manifest-path = "Cargo.toml"
python-source = "python"
module-name = "wickra_impact._wickra_impact"
features = ["pyo3/extension-module"]
strip = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
