[package]
name = "impact-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Criterion benchmarks for wickra-impact (scaffold)."
publish = false

[dependencies]
impact-core = { path = "../impact-core", version = "0.1" }

[lints]
workspace = true
