[package]
name = "impact-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "The wickra-impact reference CLI: backtest a strategy against the real historical L2 order book."

[[bin]]
name = "wickra-impact"
path = "src/main.rs"

[dependencies]
impact-core = { path = "../impact-core", version = "0.1" }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }

[lints]
workspace = true
