[package]
name = "wickra-impact-example"
description = "A runnable Rust example for the Wickra Impact market-impact backtester."
version = "0.1.0"
edition = "2021"
publish = false

# Detached from the parent workspace so the example builds on its own.
[workspace]

[[bin]]
name = "run"
path = "src/main.rs"

[dependencies]
impact-core = { path = "../../crates/impact-core", default-features = false }
serde_json = "1"
